# RAG-Agent

./: .env.example  .gitignore  README.md  aegra.sh  my_rag.ipynb  rag.sh  ui_agent.sh  ридми.txt
rag/: __init__.py  config.py  docker-compose.yaml  main.py  pyproject.toml  run_api.sh  test_client.py
rag/knowledge_base/docs/: bom_columns.md  bom_component_columns.md  bom_component_notes.md  bonus_scheme_columns.md  bonus_scheme_notes.md  business_unit_columns.md  business_unit_notes.md  company_columns.md  company_notes.md  cost_calculation.md  customer_relationship_management.md  department_columns.md  department_notes.md  downtime_reason_columns.md  downtime_reason_notes.md  employee_history.md  employee_notes.md  employee_training_notes.md  erp_integration.md  financial_management.md  hr_processes_compensation.md  hr_processes_recruitment.md  machine_notes.md  maintenance_record_columns.md  maintenance_record_notes.md  maintenance_schedule_columns.md  maintenance_schedule_notes.md  mrp_process.md  oee_calculation.md  operation_columns.md  operation_notes.md  performance_review_columns.md  plant_notes.md  position_notes.md  production_line_columns.md  production_line_notes.md  production_order_columns.md  production_scheduling.md  quality_control_process.md  salary_structure_notes.md  (+8 more)
rag/knowledge_base/sql_examples/: bom_cost_analysis_query.json  bonus_eligibility_query.json  cost_analysis_query.json  crm_analysis_query.json  department_headcount_query.json  employee_salary_query.json  example1.json  financial_analysis_query.json  (+10 more)
rag/src/: constants.py
(+123 files in other folders)
